# flight-mech

./: .buildinfo  .gitignore  .pylintrc  CNAME  README.md  airfoil_module.html  api_references.html  atmosphere_module.html  examples.html  flight_mech.aerodynamics.html  flight_mech.airfoil.html  flight_mech.atmosphere.html  flight_mech.fuel.html  flight_mech.html  flight_mech.motor.html  flight_mech.plane.html  flight_mech.turbine.html  flight_mech.wing.html  gas_module.html  genindex.html  index.html  motor_module.html  objects.inv  plane_module.html  py-modindex.html  pyproject.toml  requirements-add.txt  requirements-dev.txt  requirements.txt  search.html  searchindex.js  sitemap.xml  turbine_module.html  user_guide.html  wing_module.html
.doctrees/: airfoil_module.doctree  api_references.doctree  atmosphere_module.doctree  environment.pickle  examples.doctree  flight_mech.aerodynamics.doctree  flight_mech.airfoil.doctree  flight_mech.atmosphere.doctree  flight_mech.doctree  flight_mech.fuel.doctree  flight_mech.motor.doctree  flight_mech.plane.doctree  flight_mech.turbine.doctree  flight_mech.wing.doctree  gas_module.doctree  index.doctree  motor_module.doctree  plane_module.doctree  turbine_module.doctree  user_guide.doctree  wing_module.doctree
_modules/: index.html
_sources/: airfoil_module.rst.txt  api_references.rst.txt  atmosphere_module.rst.txt  flight_mech.atmosphere.rst.txt  flight_mech.fuel.rst.txt  flight_mech.turbine.rst.txt  index.rst.txt  motor_module.rst.txt  plane_module.rst.txt  wing_module.rst.txt
docs/: api_references.rst  bibliography.bib  (+14 more)
(+81 files in other folders)
