[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-mech"
version = "1.0.0"
authors = [{ name = "PaulCreusy", email = "paul.creusy@gmail.com" }]
description = "A package to compute the characteristics of an airplane using simple flight mechanics equations."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "matplotlib"]

[project.urls]
Homepage = "https://github.com/PaulCreusy/flight-mech"
Issues = "https://github.com/PaulCreusy/flight-mech/issues"
